fix #34 wrong position calculation
the size calculation was correct, but the position calculation was
off by a few pixels in edge-cases (literally 😅), because
`window.innerWidth` includes the scrollbar.
The 'clientWidth` property of the html element doesn't include the
scrollbars, which fixes the issue, but the html element does not
use 100% of the available height by default, thus the `min-height`
was added.

Also improved the css minify script a bit to work better with workbench
auto-formatting and added some documentation to it.

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,7 @@
+html {
+    min-height: 100%;
+}
+
 .ctxmenu {
     position: fixed;
     max-height: 100vh;
@@ -8,14 +12,14 @@
     margin: 0;
     z-index: 9999;
     overflow-y: auto;
-    font: 15px Verdana, sans-serif
+    font: 15px Verdana, sans-serif;
 }
 
 .ctxmenu li {
     margin: 1px 0;
     display: block;
     position: relative;
-    user-select: none
+    user-select: none;
 }
 
 .ctxmenu li.heading {
@@ -26,36 +30,36 @@
 .ctxmenu li span {
     display: block;
     padding: 2px 20px;
-    cursor: default
+    cursor: default;
 }
 
 .ctxmenu li a {
     color: inherit;
-    text-decoration: none
+    text-decoration: none;
 }
 
 .ctxmenu li.icon {
-    padding-left: 15px
+    padding-left: 15px;
 }
 
 .ctxmenu img.icon {
     position: absolute;
     width: 18px;
     left: 10px;
-    top: 2px
+    top: 2px;
 }
 
 .ctxmenu li.disabled {
-    color: #ccc
+    color: #ccc;
 }
 
 .ctxmenu li.divider {
     border-bottom: 1px solid #aaa;
-    margin: 5px 0
+    margin: 5px 0;
 }
 
 .ctxmenu li.interactive:hover {
-    background: rgba(0, 0, 0, 0.1)
+    background: rgba(0, 0, 0, 0.1);
 }
 
 .ctxmenu li.submenu::after {
@@ -64,15 +68,15 @@
     display: block;
     top: 0;
     bottom: 0;
-    right: .4em;
-    margin: auto .1rem auto auto;
+    right: 0.4em;
+    margin: auto 0.1rem auto auto;
     border-right: 1px solid #000;
     border-top: 1px solid #000;
     transform: rotate(45deg);
-    width: .3rem;
-    height: .3rem
+    width: 0.3rem;
+    height: 0.3rem;
 }
 
 .ctxmenu li.submenu.disabled::after {
-    border-color: #ccc
+    border-color: #ccc;
 }
